--- a/src/styles/GameLoader.module.css
+++ b/src/styles/GameLoader.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: radial-gradient(circle, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 1) 100%);
+    background: transparent
   }
   
   .spinner {
