--- a/src/styles/Mysteryinput.module.css
+++ b/src/styles/Mysteryinput.module.css
@@ -30,7 +30,8 @@
   
   .textarea {
     width: 100%;
-    height: 100px;
+    min-height: 100px;
+    max-height: 70vh;
     padding: 10px;
     border: 1px solid #363631;
     border-radius: 8px;
