--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -26,7 +26,10 @@
 }
 
 .hero {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: center;
   /* background: rgba(0, 0, 0.1, 0.1); */
   padding: 2rem;
   border-radius: 10px;
@@ -74,6 +77,9 @@
 }
 
 .signInButton {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
   font-size: 1.2rem;
   padding: 0.8rem 2rem;
   color: #fff;
@@ -81,11 +87,30 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: transform 0.3s ease 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   position: relative;
   overflow: hidden;
   z-index: 1;
+  max-width: fit-content;
+  
+  /* 3D effect */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.3);
 }
+
+.signInButton:active {
+  transform: translateY(2px); /* Slightly moves button down on click */
+  box-shadow: 0 20px 4px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.3); /* Slightly reduced shadow to enhance pressed effect */
+}
+
+.signInButton svg { /* Apply styles to the icon */
+  width: 1.5rem; /* Adjust icon size as needed */
+  height: 1.5rem; /* Ensure the icon's height is proportional to its width */
+}
+
+.signInButton span {
+  margin-left: 1rem; /* Space between the icon and text */
+}
+
 
 .signInButton::before {
   content: '';
@@ -106,5 +131,6 @@
 
 .signInButton:hover {
   transform: scale(1.05);
-  background: linear-gradient(135deg, #363631 0%, #363631 100%);
+  background: linear-gradient(135deg, hwb(56 47% 24%) 0%, #d8e061 100%);
+  color: black;
 }
